Ensure icon is aligned right regardless of label length

--- a/assets/base.css
+++ b/assets/base.css
@@ -2496,6 +2496,7 @@ details[open] > .header__icon--menu .icon-hamburger {
   padding: 1.2rem;
   text-decoration: none;
   color: rgba(var(--color-foreground), 0.75);
+  justify-content: space-between;
 }
 
 .header__menu-item:hover {
@@ -2576,7 +2577,7 @@ details[open] > .header__menu-item .icon-caret {
 .header__submenu .icon-caret {
   flex-shrink: 0;
   margin-left: 1rem;
-  position: initial;
+  position: static;
 }
 
 details-disclosure > details {
